fix broadcasts overlay by removing z-index on the wrong state

--- a/app/styles/app/layouts/broadcasts.sass
+++ b/app/styles/app/layouts/broadcasts.sass
@@ -70,7 +70,6 @@
     left: 145px
     width: 27em
     height: auto
-    z-index: 70
     margin-left: -0.7em
     .centered &
       left: 133px
